Fixed shape stroke clipping by moving padding inside SVG.

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,7 @@ h1 {
 
 .card {
     width: 20vmin;
+    padding: 10%;
 
     display: flex;
     flex-direction: column;
@@ -137,8 +138,6 @@ h1 {
 }
 /*.card.selected,*/
 .card:hover {
-    /*background: #eee;*/
-    /*margin: -1vmin;*/
     box-shadow: 2px 2px 4px #0002,
                 0 0 6px #0002;
     transform: scale(105%, 105%);
@@ -150,7 +149,6 @@ h1 {
     border-color: #faa;
 }
 .card svg {
-    margin: 5%;
-    max-height: 23%;
-    /*max-width: 80%;*/
+    width: 100%;
+    height: 33%;
 }
